--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/italian-chicken-marinade.html">italian-chicken-marinade</a></li>
+        <li><a href="recipes/best-grilled-chicken.html">best-grilled-chicken</a></li>
+        <li><a href="recipes/appleburger.html">appleburger</a></li>
+      </ul>
+    
 </body>
 </html>
