added pictures of the finished dish for every recipe page.

--- a/recipes/best-grilled-chicken.html
+++ b/recipes/best-grilled-chicken.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>best grilled Chicken</h1>
+    <img src="https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
 </body>
 </html>
