--- a/recipes/appleburger.html
+++ b/recipes/appleburger.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>appleburger</h1>
+    <img src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
 </body>
 </html>
