--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Italian Chicken Marinade</h1>
+    <img src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
 </body>
 </html>
