Made all the headers in each page and added the description to each recipe with formatting. the formatting is just to show that i know some tags.

--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Italian Chicken Marinade</h1>
     <img src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
+    <h3>Description:</h3>
+    <p>This <strong>Italian dressing chicken marinade</strong> is a <em>super simple</em> but delicious way to add flavor before grilling.</p>
+    <h3>Ingredients:</h3>
+    <h3>Steps:</h3>
 </body>
 </html>
