--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin-Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1><u>Odin Recipes</u></h1>
     <ul>
-        <li><a href="recipes/italian-chicken-marinade.html">italian-chicken-marinade</a></li>
-        <li><a href="recipes/best-grilled-chicken.html">best-grilled-chicken</a></li>
-        <li><a href="recipes/appleburger.html">appleburger</a></li>
+        <li><a href="recipes/italian-chicken-marinade.html" rel="noreferrer">italian-chicken-marinade</a></li>
+        <li><a href="recipes/best-grilled-chicken.html" rel="noreferrer">best-grilled-chicken</a></li>
+        <li><a href="recipes/appleburger.html" rel="noreferrer">appleburger</a></li>
       </ul>
     
 </body>
