--- a/recipes/appleburger.html
+++ b/recipes/appleburger.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>appleburger</title>
 </head>
 <body>
-    <h1>appleburger</h1>
+    <h1><i><u>appleburger</u></i></h1>
     <img src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
-    <h3>Description:</h3>
+    <h3><u>Description:</u></h3>
     <p>These hamburgers with grilled apple and chili crisp are <i>juicy and delicious.</i> For your summer grilling, level up beef patties with grilled sweet-tart apples and <b>thick</b>-cut onions and chili-crisp mayo.</p>
-    <h3>Ingredients:</h3>
-    <h3>Steps:</h3>
+    <h3><u>Ingredients:</u></h3>
+    <h3><u>Steps:</u></h3>
 </body>
 </html>
