added an unordered list of ingredients to each recipe page

--- a/recipes/best-grilled-chicken.html
+++ b/recipes/best-grilled-chicken.html
@@ -11,6 +11,20 @@
     <h3><u>Description:</u></h3>
     <p>The <strong>best grilled chicken</strong> breasts you'll ever make begin with a basic marinade and end with the best technique for perfect cooking, complete with beautifully-executed grill marks.</p>
     <h3><u>Ingredients:</u></h3>
+    <ul>
+        <li>6 (6 ounce) skinless, boneless chicken breasts</li>
+        <li>1/4 cup olive oil</li>
+        <li>3 tablespoons Dijon mustard</li>
+        <li>3 tablespoons honey</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>2 tablespoons lemon juice</li>
+        <li>3 cloves garlic, finely minced</li>
+        <li>1.5 teaspoons onion powder</li>
+        <li>1/2 teaspoon ground ginger</li>
+        <li>oil or cooking spray</li>
+        <li>2 teaspoons kosher salt</li>
+    </ul>
+
     <h3><u>Steps:</u></h3>
 </body>
 </html>
