--- a/recipes/appleburger.html
+++ b/recipes/appleburger.html
@@ -11,6 +11,16 @@
     <h3><u>Description:</u></h3>
     <p>These hamburgers with grilled apple and chili crisp are <i>juicy and delicious.</i> For your summer grilling, level up beef patties with grilled sweet-tart apples and <b>thick</b>-cut onions and chili-crisp mayo.</p>
     <h3><u>Ingredients:</u></h3>
+    <ul>
+        <li>2 red apples, cored (such as Fuji, Gala, or Pink Lady)</li> 
+        <li>1 pound ground beef</li>
+        <li>1/4 cup fine dry breadcrumbs</li>
+        <li>1 tablespoon plus 2 teaspoons chili crisp, divided, plus more for serving</li> 
+        <li>1/2 teaspoon salt</li>
+        <li>2 (1/3-inch) slices red onion</li>
+        <li>4 hamburger buns</li>
+        <li>1/4 cup mayonnaise</li>
+    </ul>
     <h3><u>Steps:</u></h3>
 </body>
 </html>
