--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -11,6 +11,13 @@
     <h3><u>Description:</u></h3>
     <p>This <strong>Italian dressing chicken marinade</strong> is a <em>super simple</em> but delicious way to add flavor before grilling.</p>
     <h3><u>Ingredients:</u></h3>
+    <ul>
+        <li>1 (16 ounce) bottle Italian-style salad dressing</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>1 teaspoon salt</li>
+        <li>4 skinless, boneless chicken breast halves</li>
+    </ul>
+
     <h3><u>Steps:</u></h3>
 </body>
 </html>
