added an orderd list of steps to every recipe page.

--- a/recipes/best-grilled-chicken.html
+++ b/recipes/best-grilled-chicken.html
@@ -26,5 +26,38 @@
     </ul>
 
     <h3><u>Steps:</u></h3>
+    <ol>
+        <li>
+            <h5><u>step1</u></h5>
+            <p>
+                Trim any excess fat from chicken.
+                Place a piece of plastic or parchment on top of each chicken breast on a solid, level surface, and pound the thick end of chicken to flatten to an even thickness.
+            </p> 
+        </li>
+        <li>
+            <h5><u>step2</u></h5>
+            <p>
+                Place chicken in a large resealable plastic bag. Add olive oil, Dijon, honey, soy sauce, lemon juice, garlic, onion powder, and ginger to the bag.
+                Press any excess air out of the bag and seal the bag tightly.
+                Massage chicken around in the bag until marinade is fully incorporated and chicken is well coated.
+                Refrigerate for at least 4 hours or overnight, turning the bag occasionally.
+            </p> 
+        </li>
+        <li>
+            <h5><u>step3</u></h5>
+            <p>
+                Preheat an outdoor grill for high heat, about 400 degrees F (200 degrees C).
+                Brush the grill grates with oil or coat with cooking spray. 
+            </p> 
+        </li>
+        <li>
+            <h5><u>step4</u></h5>
+            <p>
+                Place chicken, top side down, on the grill. Sprinkle evenly with salt. Cook, undisturbed, until chicken easily releases from the grill and has dark brown grill marks, about 3 minutes.
+                Reduce heat to 350 degrees F (175 degrees C) or medium heat, then flip and cook an additional 5 to 7 minutes or until chicken has reached an internal temperature of 165 degrees F (73 degrees C).
+                Remove from heat and let stand 5 to 10 minutes before serving.
+            </p> 
+        </li>
+    </ol>
 </body>
 </html>
