--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -19,5 +19,33 @@
     </ul>
 
     <h3><u>Steps:</u></h3>
+    <ol>
+        <li>
+            <h5><u>step1</u></h5>
+            <p>
+                Whisk salad dressing, garlic powder, and salt together in a shallow baking dish; add chicken breasts and turn to coat.
+                Cover the dish with plastic wrap and marinate in the refrigerator, 4 hours to overnight.
+            </p> 
+        </li>
+        <li>
+            <h5><u>step2</u></h5>
+            <p>
+                Preheat an outdoor grill for high heat and lightly oil the grate.
+            </p> 
+        </li>
+        <li>
+            <h5><u>step3</u></h5>
+            <p>
+                Remove chicken from marinade and shake off excess; discard remaining marinade.
+            </p> 
+        </li>
+        <li>
+            <h5><u>step4</u></h5>
+            <p>
+                Cook chicken on the preheated grill until no longer pink in the center and the juices run clear, about 7 to 8 minutes on each side.
+                An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).
+            </p> 
+        </li>
+    </ol>
 </body>
 </html>
