added ids and classes to every element except ols

--- a/recipes/appleburger.html
+++ b/recipes/appleburger.html
@@ -6,12 +6,12 @@
     <title>appleburger</title>
 </head>
 <body>
-    <h1><i><u>appleburger</u></i></h1>
-    <img src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
-    <h3><u>Description:</u></h3>
+    <h1 id="bheader"><i><u>appleburger</u></i></h1>
+    <img id="bimg" src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
+    <h3 class="subheaders"><u>Description:</u></h3>
     <p>These hamburgers with grilled apple and chili crisp are <i>juicy and delicious.</i> For your summer grilling, level up beef patties with grilled sweet-tart apples and <b>thick</b>-cut onions and chili-crisp mayo.</p>
-    <h3><u>Ingredients:</u></h3>
-    <ul>
+    <h3 class="subheaders"><u>Ingredients:</u></h3>
+    <ul id="bIngredient-list">
         <li>2 red apples, cored (such as Fuji, Gala, or Pink Lady)</li> 
         <li>1 pound ground beef</li>
         <li>1/4 cup fine dry breadcrumbs</li>
@@ -21,10 +21,10 @@
         <li>4 hamburger buns</li>
         <li>1/4 cup mayonnaise</li>
     </ul>
-    <h3><u>Steps:</u></h3>
+    <h3 class="subheaders"><u>Steps:</u></h3>
     <ol>
         <li>
-            <h5><u>step1</u></h5>
+            <h5 class="stepheaders"><u>step1</u></h5>
             <p>
                 Slice 1 apple using a mandoline slicer to create 8 (1/4-inch-thick) slices.
                 Shred any remaining scraps plus all or part of the second apple to get 1/2 cup shredded apple.
@@ -32,20 +32,20 @@
             </p> 
         </li>
         <li>
-            <h5><u>step2</u></h5>
+            <h5 class="stepheaders"><u>step2</u></h5>
             <p>
                 Preheat an outdoor grill to medium heat (350 to 375 degrees F (175 to 190 degrees C)).
             </p> 
         </li>
         <li>
-            <h5><u>step3</u></h5>
+            <h5 class="stepheaders"><u>step3</u></h5>
             <p>
                 Combine ground beef, breadcrumbs, 1 tablespoon chili crisp, salt, and the 1/2 cup shredded apple in a bowl.
                 Shape into 4 (1/2-inch-thick) patties, 4 inches in diameter. Mixture may be wet so be sure to tightly pack patties.
             </p> 
         </li>
         <li>
-            <h5><u>step4</u></h5>
+            <h5 class="stepheaders"><u>step4</u></h5>
             <p>
                 Oil the grill grate.
                 Grill patties, covered, carefully turning halfway through, until an instant-read thermometer inserted into centers of patties reads 160 degrees F (71 degrees C), 10 to 13 minutes.
@@ -56,7 +56,7 @@
             </p> 
         </li>
         <li>
-            <h5><u>step5</u></h5>
+            <h5 class="stepheaders"><u>step5</u></h5>
             <p>
                 Stir mayonnaise and remaining 2 teaspoons chili crisp together in a small bowl.
                 Spread buns with mayonnaise mixture and fill with patties, onion, and apple slices.
