--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -6,41 +6,41 @@
     <title>italian-chicken-marinade</title>
 </head>
 <body>
-    <h1><i><u>Italian Chicken Marinade</u></i></h1>
-    <img src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
-    <h3><u>Description:</u></h3>
+    <h1 id="marinadeheader"><i><u>Italian Chicken Marinade</u></i></h1>
+    <img id="marinadeimg" src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
+    <h3 class="subheaders"><u>Description:</u></h3>
     <p>This <strong>Italian dressing chicken marinade</strong> is a <em>super simple</em> but delicious way to add flavor before grilling.</p>
-    <h3><u>Ingredients:</u></h3>
-    <ul>
+    <h3 class="subheaders"><u>Ingredients:</u></h3>
+    <ul id="marinade-Ingredient-list">
         <li>1 (16 ounce) bottle Italian-style salad dressing</li>
         <li>1 teaspoon garlic powder</li>
         <li>1 teaspoon salt</li>
         <li>4 skinless, boneless chicken breast halves</li>
     </ul>
 
-    <h3><u>Steps:</u></h3>
+    <h3 class="subheaders"><u>Steps:</u></h3>
     <ol>
         <li>
-            <h5><u>step1</u></h5>
+            <h5 class="stepheaders"><u>step1</u></h5>
             <p>
                 Whisk salad dressing, garlic powder, and salt together in a shallow baking dish; add chicken breasts and turn to coat.
                 Cover the dish with plastic wrap and marinate in the refrigerator, 4 hours to overnight.
             </p> 
         </li>
         <li>
-            <h5><u>step2</u></h5>
+            <h5 class="stepheaders"><u>step2</u></h5>
             <p>
                 Preheat an outdoor grill for high heat and lightly oil the grate.
             </p> 
         </li>
         <li>
-            <h5><u>step3</u></h5>
+            <h5 class="stepheaders"><u>step3</u></h5>
             <p>
                 Remove chicken from marinade and shake off excess; discard remaining marinade.
             </p> 
         </li>
         <li>
-            <h5><u>step4</u></h5>
+            <h5 class="stepheaders"><u>step4</u></h5>
             <p>
                 Cook chicken on the preheated grill until no longer pink in the center and the juices run clear, about 7 to 8 minutes on each side.
                 An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).
