--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Odin-Recipes</title>
 </head>
 <body>
-    <h1><u>Odin Recipes</u></h1>
-    <ul>
+    <h1 id="index-title"><u>Odin Recipes</u></h1>
+    <ul id="page-list">
         <li><a href="recipes/italian-chicken-marinade.html" rel="noreferrer">italian-chicken-marinade</a></li>
         <li><a href="recipes/best-grilled-chicken.html" rel="noreferrer">best-grilled-chicken</a></li>
         <li><a href="recipes/appleburger.html" rel="noreferrer">appleburger</a></li>
-      </ul>
+    </ul>
     
 </body>
 </html>
