--- a/recipes/best-grilled-chicken.html
+++ b/recipes/best-grilled-chicken.html
@@ -6,12 +6,12 @@
     <title>best-grilled-chicken</title>
 </head>
 <body>
-    <h1><i><u>best grilled Chicken</u></i></h1>
-    <img src="https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
-    <h3><u>Description:</u></h3>
+    <h1 id="chickenheader"><i><u>best grilled Chicken</u></i></h1>
+    <img id="chickenimg" src="https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
+    <h3 class="subheaders"><u>Description:</u></h3>
     <p>The <strong>best grilled chicken</strong> breasts you'll ever make begin with a basic marinade and end with the best technique for perfect cooking, complete with beautifully-executed grill marks.</p>
-    <h3><u>Ingredients:</u></h3>
-    <ul>
+    <h3 class="subheaders"><u>Ingredients:</u></h3>
+    <ul id="chicken-Ingredient-list">
         <li>6 (6 ounce) skinless, boneless chicken breasts</li>
         <li>1/4 cup olive oil</li>
         <li>3 tablespoons Dijon mustard</li>
@@ -25,17 +25,17 @@
         <li>2 teaspoons kosher salt</li>
     </ul>
 
-    <h3><u>Steps:</u></h3>
+    <h3 class="subheaders"><u>Steps:</u></h3>
     <ol>
         <li>
-            <h5><u>step1</u></h5>
+            <h5 class="stepheaders"><u>step1</u></h5>
             <p>
                 Trim any excess fat from chicken.
                 Place a piece of plastic or parchment on top of each chicken breast on a solid, level surface, and pound the thick end of chicken to flatten to an even thickness.
             </p> 
         </li>
         <li>
-            <h5><u>step2</u></h5>
+            <h5 class="stepheaders"><u>step2</u></h5>
             <p>
                 Place chicken in a large resealable plastic bag. Add olive oil, Dijon, honey, soy sauce, lemon juice, garlic, onion powder, and ginger to the bag.
                 Press any excess air out of the bag and seal the bag tightly.
@@ -44,14 +44,14 @@
             </p> 
         </li>
         <li>
-            <h5><u>step3</u></h5>
+            <h5 class="stepheaders"><u>step3</u></h5>
             <p>
                 Preheat an outdoor grill for high heat, about 400 degrees F (200 degrees C).
                 Brush the grill grates with oil or coat with cooking spray. 
             </p> 
         </li>
         <li>
-            <h5><u>step4</u></h5>
+            <h5 class="stepheaders"><u>step4</u></h5>
             <p>
                 Place chicken, top side down, on the grill. Sprinkle evenly with salt. Cook, undisturbed, until chicken easily releases from the grill and has dark brown grill marks, about 3 minutes.
                 Reduce heat to 350 degrees F (175 degrees C) or medium heat, then flip and cook an additional 5 to 7 minutes or until chicken has reached an internal temperature of 165 degrees F (73 degrees C).
