added steplist id, opened the recipes folder to link the recipe files, aliened all the main headers.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1 id="index-title"><u>Odin Recipes</u></h1>
     <ul id="page-list">
-        <li><a href="recipes/italian-chicken-marinade.html" rel="noreferrer">italian-chicken-marinade</a></li>
-        <li><a href="recipes/best-grilled-chicken.html" rel="noreferrer">best-grilled-chicken</a></li>
-        <li><a href="recipes/appleburger.html" rel="noreferrer">appleburger</a></li>
+        <li><a href="italian-chicken-marinade.html" rel="noreferrer">italian-chicken-marinade</a></li>
+        <li><a href="best-grilled-chicken.html" rel="noreferrer">best-grilled-chicken</a></li>
+        <li><a href="appleburger.html" rel="noreferrer">appleburger</a></li>
     </ul>
     
 </body>
