--- a/appleburger.html
+++ b/appleburger.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>appleburger</title>
@@ -22,7 +23,7 @@
         <li>1/4 cup mayonnaise</li>
     </ul>
     <h3 class="subheaders"><u>Steps:</u></h3>
-    <ol>
+    <ol id="steplist">
         <li>
             <h5 class="stepheaders"><u>step1</u></h5>
             <p>
