--- a/appleburger.html
+++ b/appleburger.html
@@ -10,9 +10,9 @@
     <h1 id="bheader"><i><u>appleburger</u></i></h1>
     <img id="bimg" src="https://www.allrecipes.com/thmb/6FrDWEHpkkTvA9pRVFMT84OBSSE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8637636_Hamburgers-with-Grilled-Apple-and-Chili-Crisp_Dotdash-Meredith-Food-Studios_4x3-9bfefd1cbcaa42648e0a4719b741aafa.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
     <h3 class="subheaders"><u>Description:</u></h3>
-    <p>These hamburgers with grilled apple and chili crisp are <i>juicy and delicious.</i> For your summer grilling, level up beef patties with grilled sweet-tart apples and <b>thick</b>-cut onions and chili-crisp mayo.</p>
+    <p class="Description">These hamburgers with grilled apple and chili crisp are <i>juicy and delicious.</i> For your summer grilling, level up beef patties with grilled sweet-tart apples and <b>thick</b>-cut onions and chili-crisp mayo.</p>
     <h3 class="subheaders"><u>Ingredients:</u></h3>
-    <ul id="bIngredient-list">
+    <ul class="Ingredient-list">
         <li>2 red apples, cored (such as Fuji, Gala, or Pink Lady)</li> 
         <li>1 pound ground beef</li>
         <li>1/4 cup fine dry breadcrumbs</li>
@@ -23,7 +23,7 @@
         <li>1/4 cup mayonnaise</li>
     </ul>
     <h3 class="subheaders"><u>Steps:</u></h3>
-    <ol id="steplist">
+    <ol class="steplist">
         <li>
             <h5 class="stepheaders"><u>step1</u></h5>
             <p>
