--- a/best-grilled-chicken.html
+++ b/best-grilled-chicken.html
@@ -10,9 +10,9 @@
     <h1 id="chickenheader"><i><u>best grilled Chicken</u></i></h1>
     <img id="chickenimg" src="https://www.allrecipes.com/thmb/M8U_g0jDi-vgNCiwnTYdHY32GU0=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8648903_The-Perfect-Grilled-Chicken-Breasts_Dotdash-Meredith-Food-Studios_4x3-64f4be142d564b6f839339a16b6f59a2.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
     <h3 class="subheaders"><u>Description:</u></h3>
-    <p>The <strong>best grilled chicken</strong> breasts you'll ever make begin with a basic marinade and end with the best technique for perfect cooking, complete with beautifully-executed grill marks.</p>
+    <p class="Description">The <strong>best grilled chicken</strong> breasts you'll ever make begin with a basic marinade and end with the best technique for perfect cooking, complete with beautifully-executed grill marks.</p>
     <h3 class="subheaders"><u>Ingredients:</u></h3>
-    <ul id="chicken-Ingredient-list">
+    <ul class="Ingredient-list">
         <li>6 (6 ounce) skinless, boneless chicken breasts</li>
         <li>1/4 cup olive oil</li>
         <li>3 tablespoons Dijon mustard</li>
@@ -27,7 +27,7 @@
     </ul>
 
     <h3 class="subheaders"><u>Steps:</u></h3>
-    <ol id="steplist">
+    <ol class="steplist">
         <li>
             <h5 class="stepheaders"><u>step1</u></h5>
             <p>
