--- a/italian-chicken-marinade.html
+++ b/italian-chicken-marinade.html
@@ -10,9 +10,9 @@
     <h1 id="marinadeheader"><i><u>Italian Chicken Marinade</u></i></h1>
     <img id="marinadeimg" src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg" alt="nice chicken thigh" alt="nice chicken thigh" width="300" height="200">
     <h3 class="subheaders"><u>Description:</u></h3>
-    <p>This <strong>Italian dressing chicken marinade</strong> is a <em>super simple</em> but delicious way to add flavor before grilling.</p>
+    <p class="Description">This <strong>Italian dressing chicken marinade</strong> is a <em>super simple</em> but delicious way to add flavor before grilling.</p>
     <h3 class="subheaders"><u>Ingredients:</u></h3>
-    <ul id="marinade-Ingredient-list">
+    <ul class="Ingredient-list">
         <li>1 (16 ounce) bottle Italian-style salad dressing</li>
         <li>1 teaspoon garlic powder</li>
         <li>1 teaspoon salt</li>
@@ -20,7 +20,7 @@
     </ul>
 
     <h3 class="subheaders"><u>Steps:</u></h3>
-    <ol id="steplist">
+    <ol class="steplist">
         <li>
             <h5 class="stepheaders"><u>step1</u></h5>
             <p>
